Fixed login/singup button positioning on mobile

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -72,10 +72,9 @@ p a:hover {
   padding: 15px;
   margin-right: 20px;
   margin-top: 50px;
+  margin-bottom: 20px;
   float: right;
-  line-height: 20px;
   color: white;
-  letter-spacing: 1px;
 }
 
 .container-full {
